Change sample config to use producer instead of input.

--- a/sample-configs/ars-technica-feed-mailer.yaml
+++ b/sample-configs/ars-technica-feed-mailer.yaml
@@ -10,7 +10,7 @@
 # Replace [path to file] with the path to this file.
 - pipeline:
     name: ars-technica-feed-mailer
-    input:
+    producer:
       - rss:
           name: ars-technica-feed
           url: http://feeds.arstechnica.com/arstechnica/index?format=xml
