More name refactoring.
- Output -> Consumer.
- Other cleanup.

--- a/sample-configs/ars-technica-feed-mailer.yaml
+++ b/sample-configs/ars-technica-feed-mailer.yaml
@@ -14,7 +14,7 @@
       - rss:
           name: ars-technica-feed
           url: http://feeds.arstechnica.com/arstechnica/index?format=xml
-    output:
+    consumer:
       - email:
           name: email-to-myself
 #          auth_user: [login]
